# swagger.yml
@@ -494,3 +494,106 @@ paths:
           $ref: "#/components/responses/ConflictError"
         "422":
           $ref: "#/components/responses/UnprocessableEntity"
+
+  /admin/upload-avatar:
+    post:
+      summary: Upload avatars, voices and content pdf
+      description: |
+        ```
+        type : 1 -> Upload new avatars
+        type : 2 -> Upload new voices
+        type : 3 -> Content PDFs
+        ```
+      tags:
+        - Admin
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                type:
+                  type: string
+                  example: 1
+                avatarName:
+                  type: string
+                  example: Rohit Sharma
+                avatarImage:
+                  type: string
+                  format: binary
+                voiceDescription:
+                  type: string
+                  description: rohit sharma podcast
+                voiceFile:
+                  type: string
+                  format: binary
+                class:
+                  type: string
+                  example: 10
+                subject:
+                  type: string
+                  example: English
+                pdfFile:
+                  type: string
+                  format: binary
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+  /admin/avatar:
+    get:
+      description: Avatar, Voice, and Content list
+      summary: Avatar, Voice, and Content list
+      tags:
+        - Admin
+
+      security:
+        - bearerAuth: []
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "409":
+          $ref: "#/components/responses/ConflictError"
+        "422":
+          $ref: "#/components/responses/UnprocessableEntity"
+
+  /admin/teacher-avatar:
+    post:
+      summary: Upload teacher avatar
+      description: |
+        - Upload teacher avatar
+      tags:
+        - Admin
+      
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                contentPdfId:
+                  type: string
+                  example: 67b0527b98b2f29e2cd8846c
+                voiceId:
+                  type: string
+                  example: 67b0526b98b2f29e2cd8846a
+                avatarId:
+                  type: string
+                  example: 67b0524f98b2f29e2cd88468
+              required:
+                - contentPdfId
+                - voiceId
+                - avatarId
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "404":
+          $ref: "#/components/responses/NotFoundError"   
